#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
struct in_addr {int dummy; } ;
struct sockaddr_in {int /*<<< orphan*/  sin_zero; struct in_addr sin_addr; int /*<<< orphan*/  sin_port; int /*<<< orphan*/  sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;

/* Variables and functions */
 int /*<<< orphan*/  AF_INET ; 
 int FAD ; 
 struct hostent* GET_HOST_NM_ERR ; 
 int /*<<< orphan*/  NRL ; 
 int /*<<< orphan*/  SIN_ZR_SIZE ; 
 int /*<<< orphan*/  SOCK_STREAM ; 
 int /*<<< orphan*/  bzero (int /*<<< orphan*/ *,int /*<<< orphan*/ ) ; 
 int connect (int,struct sockaddr*,int) ; 
 struct hostent* gethostbyname (char*) ; 
 int /*<<< orphan*/  htons (int) ; 
 int socket (int /*<<< orphan*/ ,int /*<<< orphan*/ ,int /*<<< orphan*/ ) ; 

int setsock(char *u_host,int u_port)
{
	int sock;
	struct hostent *sxp;
	struct sockaddr_in sxp_addr;
 
	if((sxp=gethostbyname(u_host))==(GET_HOST_NM_ERR))
	{
		return(FAD);
	}
	if((sock=socket(AF_INET,SOCK_STREAM,(NRL)))==(FAD))
	{
		return(FAD);
	}
	sxp_addr.sin_family=AF_INET;
	sxp_addr.sin_port=htons(u_port);
	sxp_addr.sin_addr=*((struct in_addr*)sxp->h_addr);
	bzero(&(sxp_addr.sin_zero),(SIN_ZR_SIZE));

	if(connect(sock,(struct sockaddr *)&sxp_addr,sizeof(struct sockaddr))==(FAD))
	{
		return(FAD);
	}
	return(sock);
}